# basol

./: .env.example  .gitattributes  .gitignore  .replit  Cargo.toml  README.md  bot_data.json  config.env  config.env.example  install.sh  replit.md  update.sh
src/: backtest.rs  main.rs  paper_trading.rs  positions.rs  sell_strategy.rs  strategy.rs  wallet.rs
