[package]
name = "solana_analyzer"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "solana_analyzer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
base64 = "0.21"
anyhow = "1"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
